update beat config file for new properties

--- a/etc/beat.yml
+++ b/etc/beat.yml
@@ -4,4 +4,7 @@
 
 actuatorbeat:
   # Defines how often an event is sent to the output
-  period: 1s
+  period: 10s
+
+  urls:
+    - http://localhost:8080/metrics
